# DFAFXT

./: .gitignore  CMakeLists.txt  DFAF_XT_REFACTOR_PLAN.md  README.md  deploy.sh  release-universal.sh
Source/: DecayEnvelope.h  MoogLadderFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  XTSequencer.h  XTVoice.h
